# omtl-lang

./: .gitignore  CMakeLists-llvm.txt  CMakeLists.txt  README.md  vendor.txt
entry/: main.cpp  tests.cpp
include/: AutonameMap.h
include/omtl/: AutonameMap.h  Class.hpp  CodeGen.hpp  Compiler.hpp  CppClass.hpp  Function.hpp  Functor.hpp  Language.hpp  MacroParser.hpp  MacroTypes.hpp  NumericObject.hpp  Object.hpp  StringObject.hpp  Symbol.hpp  Util.hpp  argumentMatching.h  language.h  language.ipp
src/: AutonameMap.h  MacroParser.cpp  MacroTypes.cpp  Symbol.cpp  main.cpp
text/: classSample.omtl  in.omtl
vendor-mod/include/omtl/: ParseTree.hpp  ParseTree.ipp  Tokenizer.hpp  Tokenizer.ipp
